fix financial functions
